# ChatGPTWrapper

./: .gitignore  README.md  app.py  requirements.txt
.github/workflows/: README.md  ci.yml  deploy.yml
backend/: .gitignore  README.md  build.py  pyproject.toml  requirements-dev.txt  requirements.txt  stream_out.json
backend/src/anna_chat/: attachments_repo.py  bedrock_client.py  chunking.py  ddb.py  embeddings.py  extractors.py  http.py  kb_repo.py  kb_retrieve.py  logging_config.py  prompts_repo.py  settings.py
backend/src/anna_chat/handlers/: attachments.py  chat.py  conversations.py  extract.py  kb.py  kb_ingest.py  prompts.py
backend/tests/: test_attachments_repo.py  test_chunking.py  test_ddb_models.py  test_extractors.py  test_http.py  test_kb_repo.py  test_kb_retrieve.py  test_logging_no_phi.py  test_prompts_repo.py
docs/: ARCHITECTURE.md  ATTACHMENTS_CONTRACT.md  DEPLOY.md  HIPAA_NOTES.md  INCIDENT_RESPONSE.md  KB_CONTRACT.md  OPS.md  PENTEST_REPORT.md  PROMPTS_CONTRACT.md  SETUP_M365_SSO.md
docs/hipaa/: BAA_TRACKER.md  README.md  RISK_ASSESSMENT.md
docs/hipaa/POLICIES/: ACCESS_CONTROL.md  CONTINGENCY.md  (+3 more)
docs/templates/: ARCHITECTURE.md  DISASTER_RECOVERY.md  HIPAA_CHECKLIST.md  ONBOARDING.md  README.md  SECURITY_RUNBOOK.md
frontend/: .env.example  README.md  deploy.py  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: signed-out.html
frontend/src/: App.tsx  config.ts  main.tsx  prompts.ts  vite-env.d.ts
infra/: README.md
infra/bootstrap/: .gitignore  README.md  main.tf  outputs.tf  providers.tf  variables.tf
(+74 files in other folders)
